Fixed login button alignment

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -55,6 +55,10 @@ body {
   }
 }
 
+.navbar-right.navbar--login {
+  margin-right: 5px;
+}
+
 .page-header {
   .alert {
     font-size: 14px;
